[package]
name = "finally-christmas-blink"
version = "0.1.0"
authors = ["haraldkriebisch <harald.kriebisch@dreebit.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "finally-christmas-blink"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []
pio = ["esp-idf-svc/pio"]
experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
esp-idf-svc = { version = "0.49", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
esp-idf-sys = { version = "0.35.0", features = ["binstart"] }
esp-idf-hal = "0.44.1"
esp-println = { version = "0.12.0", features = ["esp32c6"] }
embedded-hal = "1.0.0"
embedded-svc = "0.28.0"
heapless = "0.8.0"

[build-dependencies]
embuild = "0.32.0"
cc = "=1.1.30" # Version "1.1.30" necessary until a new version of `esp-idf-sys` is released
